--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
+    "jquery": "^2.0.3",
     "bootstrap": "^3.2.0",
     "es5-shim": "^4.0.0",
     "json3": "^3.3.0",
